全局组件已注册以及样式统一完毕

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -64,3 +64,13 @@ div:focus {
 .app-container {
   padding: 20px;
 }
+
+.dashboard {
+  &-container {
+    margin: 30px;
+  }
+  &-text {
+    font-size: 30px;
+    line-height: 46px;
+  }
+}
